[metadata]
name = webob_caesarlinsa
version = 1.0
description-file = README.md
author = caesarlinsa
author-email = Caesar_Linsa@163.com
classifier =
    Intended Audience :: Developers
    Programming Language :: Python :: 3.7

[files]
packages =
    webob_caesarlinsa

[entry_points]
console_scripts =
    webob-caesarlinsa = webob_caesarlinsa.cmd.api:main
